--- a/app/templates/challenges/form.html
+++ b/app/templates/challenges/form.html
@@ -17,6 +17,10 @@
       <textarea class="form-control" rows="15" ng-model="challenge.criteria"></textarea>
     </div>
     <div class="form-group">
+      <label>Tags</label>
+      <input class="form-control" ng-model="challenge.tags">
+    </div>
+    <div class="form-group">
       <button class="btn btn-default">Save as Draft</button>
       <button class="btn btn-default">Submit</button>
     </div>
