--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -24,8 +24,11 @@
         <button class="btn btn-info" ng-click="loginObj.$login('github')">
           Github
         </button>
-	<button class="btn btn-info" ng-click="loginObj.$login('twitter')">
+        <button class="btn btn-info" ng-click="loginObj.$login('twitter')">
           Twitter
+        </button>
+        <button class="btn btn-info" ng-click="loginObj.$login('facebook')">
+          Facebook
         </button>
         <button class="btn btn-large btn-primary pull-right">
           Register
