--- a/app/templates/challenges/index.html
+++ b/app/templates/challenges/index.html
@@ -32,6 +32,7 @@
       <span class="label label-primary">{{challenge.difficulty}}</span>
       <!-- number of developers that have completed challenge -->
       <span class="badge badge-info">42</span>
+      <a class="btn btn-primary" ui-sref="new-submission">Post Submission</a>
     </div>
     </div>
   </div>
