--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,7 +13,7 @@
     </label>
   </div>
   <div class="form-group">
-    <button class="btn btn-warning">Cancel</button>
+    <a class="btn btn-warning" ng-click="cancel()">Cancel</a>
     <button class="btn btn-primary pull-right">Login</button>
   </div>
 </form>
