--- a/app/challenges/templates/goal-modal.html
+++ b/app/challenges/templates/goal-modal.html
@@ -21,6 +21,6 @@
   </div>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-primary" ng-click="ok()">OK</button>
+  <button class="btn btn-primary" ng-click="ok(goal)">OK</button>
   <button class="btn btn-warning" ng-click="cancel()">Cancel</button>  
 </div>
